--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<base href="/">
+<!doctype html>
+<html>
+    <head> 
+    <base href="/">
 <script src="/public/bower_components/angular/angular.min.js"></script>
-<script src="/public/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="/public/bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="/public/bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="/public/bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="/public/bower_components/angular-material/angular-material.min.js"></script>
 <script src="/public/bower_components/angular-material-icons/angular-material-icons.min.js"></script>
-<script src='/public/js/actuser.js'></script>
+ <script
+src="/public/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/public/js/controller.js"></script>
 
-<link
-href='/public/bower_components/font-awesome/css/font-awesome.css'
-rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
-<link rel="stylesheet"
-href="/public/bower_components/angular-material/angular-material.min.css">
-</head>
 
-<body ng-app="Passreset">
-  <div ui-view />
-</body>
 
+<link href="/public/css/style.css" type="text/css" rel="stylesheet" />
+<link href='/public/bower_components/font-awesome/css/font-awesome.css'
+rel='stylesheet' type='text/css' />
+<link rel="stylesheet" href="/public/bower_components/angular-material/angular-material.min.css" />
+     </head>
+
+    <body ng-app="Activatemail" ng-controller="Activatectrl">
+	<div ui-view></div>
+     </body>
 </html>
